# time-series

./: LICENSE  baseline_exp_models.ipynb  baseline_models.ipynb  conv1D.ipynb  data.r  metrics.py  models.py  multiple_linear_reg.ipynb  pyproject.toml  requirements.txt  rnn_lstm_models.ipynb  sarima_models.ipynb  variable_transformation.ipynb
