[tool.poetry]
name = "time-series"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
tensorflow = "^2.18.0"
statsmodels = "^0.14.4"
scikit-learn = "^1.5.2"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
sktime = "^0.34.0"
pmdarima = "^2.0.4"
numpy = "1.26.4"
tqdm = "^4.67.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
